--- a/public/css/app.css
+++ b/public/css/app.css
@@ -600,39 +600,6 @@ select {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.container {
-  width: 100%;
-}
-@media (min-width: 640px) {
-
-  .container {
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px) {
-
-  .container {
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px) {
-
-  .container {
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px) {
-
-  .container {
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px) {
-
-  .container {
-    max-width: 1536px;
-  }
-}
 .prose {
   color: var(--tw-prose-body);
   max-width: 65ch;
@@ -970,6 +937,92 @@ select {
 .prose > :where(:last-child):not(:where([class~="not-prose"] *)) {
   margin-bottom: 0;
 }
+.card {
+  display: flex;
+  width: 100%;
+  cursor: pointer;
+  align-items: center;
+  gap: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.card:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+.card__img {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  width: 3rem;
+  flex-basis: 4rem;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.card__img > img {
+  height: 100%;
+  width: 100%;
+  border-radius: 9999px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card__content {
+  width: 100%;
+  border-top-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(113 113 122 / var(--tw-border-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.card__content__head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card__content__head > h1 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.card__content__body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card__content__body__tools {
+  display: flex;
+  --tw-translate-x: 1rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  align-items: center;
+}
+.card__content__body__tools > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.card__content__body__tools {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.card__content__body__tools > #card_menu {
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0;
+}
+.card:nth-child(1) > .card__content {
+  border-style: none;
+}
+.card:hover .card__content__body__tools {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.card:hover .card__content__body__tools > #card_menu {
+  --tw-scale-x: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 1;
+}
 .fixed {
   position: fixed;
 }
@@ -989,30 +1042,6 @@ select {
   top: 1.25rem;
   bottom: 1.25rem;
 }
-.inset-x-10 {
-  left: 2.5rem;
-  right: 2.5rem;
-}
-.inset-y-6 {
-  top: 1.5rem;
-  bottom: 1.5rem;
-}
-.inset-x-0 {
-  left: 0px;
-  right: 0px;
-}
-.inset-y-0 {
-  top: 0px;
-  bottom: 0px;
-}
-.inset-x-4 {
-  left: 1rem;
-  right: 1rem;
-}
-.inset-y-4 {
-  top: 1rem;
-  bottom: 1rem;
-}
 .inset-x-8 {
   left: 2rem;
   right: 2rem;
@@ -1023,17 +1052,11 @@ select {
 .right-0 {
   right: 0px;
 }
-.right-10 {
-  right: 2.5rem;
-}
-.bottom-0 {
-  bottom: 0px;
+.right-8 {
+  right: 2rem;
 }
 .top-0 {
   top: 0px;
-}
-.right-8 {
-  right: 2rem;
 }
 .z-0 {
   z-index: 0;
@@ -1176,23 +1199,20 @@ select {
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-7 {
-  height: 1.75rem;
-}
-.h-\[calc\(100\%-9\.75rem\)\] {
-  height: calc(100% - 9.75rem);
-}
 .h-screen {
   height: 100vh;
 }
 .h-full {
   height: 100%;
 }
+.h-\[calc\(100\%-9\.75rem\)\] {
+  height: calc(100% - 9.75rem);
+}
 .h-52 {
   height: 13rem;
 }
-.h-36 {
-  height: 9rem;
+.h-\[calc\(100\%-7rem\)\] {
+  height: calc(100% - 7rem);
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1247,17 +1267,8 @@ select {
   width: -moz-fit-content;
   width: fit-content;
 }
-.w-9 {
-  width: 2.25rem;
-}
-.w-7 {
-  width: 1.75rem;
-}
 .w-\[55\%\] {
   width: 55%;
-}
-.w-\[30\%\] {
-  width: 30%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1325,14 +1336,14 @@ select {
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.scale-0 {
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .scale-50 {
   --tw-scale-x: .5;
   --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -1388,9 +1399,6 @@ select {
 }
 .gap-1 {
   gap: 0.25rem;
-}
-.gap-8 {
-  gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1503,6 +1511,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-zinc-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(113 113 122 / var(--tw-border-opacity));
+}
 .border-zinc-600 {
   --tw-border-opacity: 1;
   border-color: rgb(82 82 91 / var(--tw-border-opacity));
@@ -1579,9 +1591,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(113 113 122 / var(--tw-bg-opacity));
 }
-.bg-slate-700 {
+.bg-emerald-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1661,21 +1673,13 @@ select {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1707,20 +1711,17 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pl-12 {
+  padding-left: 3rem;
+}
 .pr-5 {
   padding-right: 1.25rem;
-}
-.pl-16 {
-  padding-left: 4rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
 }
 .pt-8 {
   padding-top: 2rem;
-}
-.pl-12 {
-  padding-left: 3rem;
 }
 .text-left {
   text-align: left;
@@ -1856,17 +1857,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
 }
-.text-emerald-400 {
+.text-emerald-500 {
   --tw-text-opacity: 1;
-  color: rgb(52 211 153 / var(--tw-text-opacity));
+  color: rgb(16 185 129 / var(--tw-text-opacity));
 }
 .text-zinc-300 {
   --tw-text-opacity: 1;
   color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-.text-emerald-500 {
-  --tw-text-opacity: 1;
-  color: rgb(16 185 129 / var(--tw-text-opacity));
 }
 .text-emerald-600 {
   --tw-text-opacity: 1;
@@ -1883,6 +1880,10 @@ select {
 .text-zinc-500 {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+.text-zinc-800 {
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1928,10 +1929,6 @@ select {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
 }
 .ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -2013,23 +2010,14 @@ select {
   width: 8px;
   height: 8px;
 }
+.scrollbar-thumb-zinc-\35 00 {
+  --scrollbar-thumb: #71717a !important;
+}
 .scrollbar-thumb-zinc-\36 00 {
   --scrollbar-thumb: #52525b !important;
 }
 .scrollbar-track-zinc-\39 00 {
   --scrollbar-track: #18181b !important;
-}
-.placeholder\:text-zinc-600::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-.placeholder\:text-zinc-600:-ms-input-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-.placeholder\:text-zinc-600::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 .placeholder\:text-zinc-400::-moz-placeholder {
   --tw-text-opacity: 1;
@@ -2444,21 +2432,6 @@ select {
 }
 @media (min-width: 768px) {
 
-  .md\:inset-y-5 {
-    top: 1.25rem;
-    bottom: 1.25rem;
-  }
-
-  .md\:inset-x-8 {
-    left: 2rem;
-    right: 2rem;
-  }
-
-  .md\:inset-y-6 {
-    top: 1.5rem;
-    bottom: 1.5rem;
-  }
-
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2475,36 +2448,24 @@ select {
     display: grid;
   }
 
-  .md\:h-6 {
-    height: 1.5rem;
+  .md\:h-8 {
+    height: 2rem;
   }
 
-  .md\:h-5 {
-    height: 1.25rem;
+  .md\:h-6 {
+    height: 1.5rem;
   }
 
   .md\:h-\[calc\(100\%-7\.7rem\)\] {
     height: calc(100% - 7.7rem);
   }
 
-  .md\:h-8 {
-    height: 2rem;
+  .md\:w-8 {
+    width: 2rem;
   }
 
   .md\:w-6 {
     width: 1.5rem;
-  }
-
-  .md\:w-5 {
-    width: 1.25rem;
-  }
-
-  .md\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .md\:w-8 {
-    width: 2rem;
   }
 
   .md\:basis-\[30\%\] {
@@ -2541,11 +2502,6 @@ select {
     border-left-width: 1px;
   }
 
-  .md\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -2554,14 +2510,6 @@ select {
   .md\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
-  }
-
-  .md\:pr-3 {
-    padding-right: 0.75rem;
-  }
-
-  .md\:pl-10 {
-    padding-left: 2.5rem;
   }
 }
 @media (min-width: 1024px) {
