--- a/public/css/app.css
+++ b/public/css/app.css
@@ -970,7 +970,7 @@ select {
   width: 100%;
   border-top-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(113 113 122 / var(--tw-border-opacity));
+  border-color: rgb(63 63 70 / var(--tw-border-opacity));
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
@@ -995,13 +995,6 @@ select {
   --tw-translate-x: 1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   align-items: center;
-}
-.card__content__body__tools > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.card__content__body__tools {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
@@ -1038,17 +1031,13 @@ select {
   bottom: 0px;
   left: 0px;
 }
-.inset-y-5 {
-  top: 1.25rem;
-  bottom: 1.25rem;
+.inset-y-\[1\.1rem\] {
+  top: 1.1rem;
+  bottom: 1.1rem;
 }
 .inset-x-8 {
   left: 2rem;
   right: 2rem;
-}
-.inset-y-0 {
-  top: 0px;
-  bottom: 0px;
 }
 .left-0 {
   left: 0px;
@@ -1059,11 +1048,11 @@ select {
 .right-8 {
   right: 2rem;
 }
-.top-0 {
-  top: 0px;
-}
 .bottom-0 {
   bottom: 0px;
+}
+.top-0 {
+  top: 0px;
 }
 .z-0 {
   z-index: 0;
@@ -1209,6 +1198,9 @@ select {
   height: -moz-fit-content;
   height: fit-content;
 }
+.h-\[calc\(100\%-7\.1rem\)\] {
+  height: calc(100% - 7.1rem);
+}
 .h-screen {
   height: 100vh;
 }
@@ -1220,15 +1212,6 @@ select {
 }
 .h-52 {
   height: 13rem;
-}
-.h-\[calc\(100\%-7rem\)\] {
-  height: calc(100% - 7rem);
-}
-.h-\[calc\(100\%-6\.8rem\)\] {
-  height: calc(100% - 6.8rem);
-}
-.h-\[calc\(100\%-7\.1rem\)\] {
-  height: calc(100% - 7.1rem);
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1283,11 +1266,11 @@ select {
   width: -moz-fit-content;
   width: fit-content;
 }
-.w-\[55\%\] {
-  width: 55%;
-}
 .w-\[30\%\] {
   width: 30%;
+}
+.w-\[55\%\] {
+  width: 55%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1353,11 +1336,6 @@ select {
 .scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.scale-50 {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-0 {
@@ -1530,9 +1508,9 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-zinc-500 {
+.border-zinc-700 {
   --tw-border-opacity: 1;
-  border-color: rgb(113 113 122 / var(--tw-border-opacity));
+  border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
 .border-zinc-600 {
   --tw-border-opacity: 1;
@@ -1541,10 +1519,6 @@ select {
 .border-emerald-600 {
   --tw-border-opacity: 1;
   border-color: rgb(5 150 105 / var(--tw-border-opacity));
-}
-.border-zinc-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
 .border-gray-400 {
   --tw-border-opacity: 1;
@@ -1613,6 +1587,10 @@ select {
 .bg-emerald-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1692,6 +1670,10 @@ select {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
+.px-\[5\.25rem\] {
+  padding-left: 5.25rem;
+  padding-right: 5.25rem;
+}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1730,11 +1712,11 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pl-12 {
-  padding-left: 3rem;
+.pl-\[4\.25rem\] {
+  padding-left: 4.25rem;
 }
-.pr-5 {
-  padding-right: 1.25rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
