--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,7 +13,7 @@
         @apply w-full h-full rounded-full object-cover;
     }
     .card__content {
-        @apply py-3 border-t border-zinc-500 w-full;
+        @apply py-3 border-t border-zinc-700 w-full;
     }
     .card__content__head {
         @apply flex items-center justify-between;
@@ -25,7 +25,7 @@
         @apply flex items-center justify-between;
     }
     .card__content__body__tools {
-        @apply flex items-center space-x-1 translate-x-4 transition-transform;
+        @apply flex items-center translate-x-4 transition-transform;
     }
     .card__content__body__tools > #card_menu {
         @apply scale-x-0 opacity-0;
